<resources>
    <string name="app_name">Registro de Usuario</string>
    <string name="registrarse2">REGISTRARSE</string>
    <string name="usuario">USUARIO</string>
    <string name="password">PASSWORD</string>
    <string name="login">LOGIN</string>
    <string name="registro">REGISTRO</string>
    <string name="nombre">NOMBRE</string>
    <string name="email">EMAIL</string>
    <string name="contrase_a">CONTRASEÑA</string>
    <string name="confirmar_contrase_a">CONFIRMAR CONTRASEÑA</string>
    <string name="mujer">MUJER</string>
    <string name="hombre">HOMBRE</string>
    <string name="no_especifica">NO ESPECIFICA</string>
    <string name="registrarse">REGISTRARSE</string>

</resources>